--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     margin: 0 auto;
     padding: 0 2%;
     display: flex;
+    flex-wrap: wrap;
 }
 
 header {
@@ -47,12 +48,140 @@ header {
 .menu .btn-menu {
     background-color: #0f668b;
     display: inline-block;
-    padding: 6px 12px;
+    padding: 8px 12px;
     color: white;
-    border-radius: 8px;
+    border-radius: 6px;
 }
 
 .menu .btn-menu:hover {
     background-color: #124265;
     color: white;
 }
+
+section.main {
+    background-image: url('img/background.png');
+    padding: 70px 0;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.main_cta {
+    width: 100%;
+    margin: 60px 0;
+    text-align: center;
+}
+
+.main_cta h2 {
+    color: #16507b;
+    font-size: 40px;
+}
+
+.main_cta p {
+    color: gray;
+    font-size: 19px;
+    margin: 10px;
+}
+
+.main_cta button {
+    background-color: #007bff;
+    display: inline-block;
+    padding: 8px 30px;
+    color: white;
+    border-radius: 6px;
+    font-size: 16px;
+    border: 0;
+    cursor: pointer;
+}
+
+.diferenciais {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.diferencial-single {
+    border-radius: 10px;
+    background-color: white;
+    width: 23%;
+    margin-right: 2%;
+    padding: 50px 20px;
+}
+
+
+.diferencial-single h2 {
+    color: #124265;
+    margin: 10px 0;
+    font-size: 17px;
+    line-height: 30px;
+}
+
+.diferencial-single p {
+    color: gray;
+    font-size: 14px;
+    line-height: 30px;
+}
+
+section.sobre {
+    padding: 80px 0;
+}
+
+.chamada-sobre {
+    width: 100%;
+    text-align: center;
+}
+
+.chamada-sobre h2 {
+    color: #124265;
+    text-transform: uppercase;
+}
+
+.chamada-sobre p {
+    font-size: 14px;
+    color: gray;
+    margin: 10px 0;
+}
+
+.conteudo-sobre {
+    display: flex;
+}
+
+.conteudo-sobre p {
+    width: 48%;
+    margin-right: 2%;
+    color: #444444;
+}
+
+section.conquistas {
+    background-color: #f8fbfe;
+    padding: 8px 0;
+}
+
+.conquista-single {
+    width: 22%;
+    margin-right: 3%;
+    text-align: center;
+    color: #124265;
+}
+
+.conquistas {
+    background-color: aliceblue;
+}
+
+.conquista-single h2 {
+    font-size: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .diferencial-single {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .conteudo-sobre p {
+        width: 100%;
+        margin: 20px 20px;
+    }
+    
+}
+
